# CS173P5-Boolean-Circuits

Project5/: Boolean.c  Boolean.h  CMakeLists.txt  Circuit.c  Circuit.h  Gates.c  Gates.h  Makefile  ParseTree.c  ParseTree.h  Parser.c  Parser.h  README.txt  Stack.c  Stack.h  main  main.c
